# AugmentedSocialScientistFork

./: README.md  pyproject.toml  requirements.txt  setup.py  setup_cli.py
AugmentedSocialScientistFork/: __init__.py  benchmark_dataset_builder.py  benchmarking.py  bert_abc.py  bert_base.py  bert_base_enhanced.py  cli.py  data_splitter.py  data_utils.py  logging_utils.py  model_selector.py  models.py  multi_label_trainer.py  multilingual_selector.py  parallel_inference.py  reinforced_params.py  sota_models.py
AugmentedSocialScientistFork.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: README.md  demo_interactive.py  use_cli_programmatically.py
scripts/: train_models.py
test_data/: test_data.jsonl
